--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include  ':BAnim_v7Library', ':ClockCalendar', ':base_library_pullToRefresh_chenyoca', ':BAnim_ListViewLibrary', ':XCL-Charts'
+include  ':app',':BAnim_v7Library', ':ClockCalendar', ':base_library_pullToRefresh_chenyoca', ':BAnim_ListViewLibrary', ':XCL-Charts'
