--- a/ClockCalendar/AndroidManifest.xml
+++ b/ClockCalendar/AndroidManifest.xml
@@ -17,7 +17,7 @@
     <application
         android:name="com.yktx.check.ClockApplication"
         android:allowBackup="true"
-
+        android:icon="@drawable/icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
